traversal.snake.Snake.scala.error
Compilation error:
Snake:6: error: value =! is not a member of Boolean
{right(); test=!isFacingWall(); left()}; return(test)}
              ^Snake:8: error: not found: value &&
  while(!isFacingWall())&&(!test2) {forward(); test2=test_fin()};
                        ^